Fixed data table commits sass error

--- a/skin/frontend/meanbee/default/css/styles.scss
+++ b/skin/frontend/meanbee/default/css/styles.scss
@@ -408,6 +408,7 @@ p.required { color: #EB340A; font-size: 11px; text-align: right; }
         td .option-label { font-style: italic; font-weight: bold; }
         td .option-value { padding-left: 10px; }
     }
+}
 
 /* Global Messages =============================================================== */
 .success { color: #3d6611; font-weight: bold; }
