--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -1033,6 +1033,131 @@ tr.summary-details-excluded {
   background-color: #F3F7AC;
   color: #363636; }
 
+/* Header ================================================================================ */
+.logo {
+  float: left; }
+
+.header-container {
+  background: url(../images/bkg_header.jpg) repeat 50% 0;
+  border-top: 5px solid #0d2131;
+  border-bottom: 1px solid #415966; }
+  .header-container .top-container {
+    clear: both;
+    padding: 5px 10px 0 12px;
+    text-align: right; }
+    .header-container .top-container a {
+      color: #ebbc58;
+      font-size: 11px; }
+
+.header {
+  margin: 0 auto;
+  padding: 10px;
+  position: relative;
+  text-align: right;
+  width: 930px;
+  z-index: 10; }
+  .header .logo {
+    float: left;
+    margin: 3px 0 10px 12px;
+    text-decoration: none !important; }
+    .header .logo strong {
+      font-size: 0;
+      height: 0;
+      left: -999em;
+      line-height: 0;
+      overflow: hidden;
+      position: absolute;
+      text-indent: -999em;
+      top: -999em;
+      width: 0; }
+  .header h1.logo {
+    margin: 0; }
+  .header .quick-access {
+    float: right;
+    padding: 28px 10px 0 0;
+    width: 600px; }
+  .header .welcome-msg {
+    color: #fff;
+    margin: 0;
+    text-align: right; }
+    .header .welcome-msg a {
+      color: #ebbc58; }
+  .header .form-search {
+    background: url(../images/bkg_form-search.gif) no-repeat 0 0;
+    height: 30px;
+    padding: 1px 0 0 16px;
+    position: absolute;
+    right: 29px;
+    top: 0;
+    width: 315px; }
+    .header .form-search label {
+      float: left;
+      height: 21px;
+      overflow: hidden;
+      text-align: left;
+      text-indent: -999em;
+      width: 24px; }
+    .header .form-search input.input-text {
+      border-color: #5c7989;
+      float: left;
+      margin-right: 4px;
+      width: 209px; }
+    .header .form-search button.button {
+      float: left; }
+      .header .form-search button.button span {
+        background: url(../images/btn_search.gif) no-repeat 0 0;
+        border: 0;
+        font: bold 11px/21px Tahoma, Verdana, Arial, sans-serif;
+        height: 21px;
+        padding: 0 0 0 3px; }
+        .header .form-search button.button span span {
+          background-position: 100% 0;
+          padding: 0 6px 0 3px; }
+    .header .form-search .search-autocomplete {
+      left: 40px !important;
+      top: 22px !important;
+      z-index: 999; }
+      .header .form-search .search-autocomplete ul {
+        background-color: #f9f5f0;
+        border: 1px solid #5c7989; }
+      .header .form-search .search-autocomplete li {
+        border-bottom: 1px solid #f4eee7;
+        cursor: pointer;
+        padding: 2px 8px 1px 8px;
+        text-align: left; }
+      .header .form-search .search-autocomplete li .amount {
+        float: right;
+        font-weight: bold; }
+      .header .form-search .search-autocomplete li.odd {
+        background-color: #fffefb; }
+      .header .form-search .search-autocomplete li.selected {
+        background-color: #f7e8dd; }
+  .header .form-language {
+    clear: both;
+    padding: 5px 0 0;
+    text-align: right; }
+    .header .form-language label {
+      color: #a7c6dd;
+      font-weight: bold;
+      padding-right: 5px;
+      vertical-align: middle; }
+    .header .form-language select {
+      padding: 0; }
+    .header .form-language select.flags option {
+      background-position: 4px 50%;
+      background-repeat: no-repeat;
+      padding-left: 25px; }
+  .header .links {
+    float: right;
+    margin: 0 0 6px; }
+    .header .links li {
+      float: left;
+      font-size: 11px;
+      background: url(../images/bkg_pipe1.gif) no-repeat 100% 60%;
+      padding: 0 8px 0 7px; }
+    .header .links a {
+      color: #ebbc58; }
+
 /* Clears ======================================================================== */
 .clearer:after,
 .header-container:after,
